# sqlx-insert

./: Cargo.toml  README.md  rust-toolchain.toml
sqlx_insert/: Cargo.toml
sqlx_insert/.sqlx/: query-117f6af4b5a25afef374c76d699427f7689068e011d7e60d609127e590cb9fe9.json  query-61f7ba469df7e3fbb64eee08fce4daf89ab50f6d78e12a78ca009c939f5279fb.json  query-82406a22f33219e222add183d0cd7191cd5f601192a113cd8f315a59f6550583.json  query-8e68149815b81e4b912ec059e772c4989a475ed31f68b2bc6790dfea0ef27827.json  query-c0ef4a31d4e9d674977efd55841c2790029cb5ee655895401826374cc4ca3637.json  query-e8c857d6091b7306f7810159576ff6fed67ead90d05e0ed9bd66fb7df60a1e55.json
sqlx_insert/src/: lib.rs
sqlx_insert/tests/: tests.rs  ui.rs
sqlx_insert/tests/ui/: not_compatible_fields.rs  not_compatible_fields.stderr  unknown_database.rs  unknown_database.stderr  unnamed_fields.rs  unnamed_fields.stderr  unsupported_types.rs  unsupported_types.stderr
sqlx_insert_derive/: .gitignore  Cargo.toml
sqlx_insert_derive/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
