[package]
name = "sqlx_insert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx_insert_derive = { path = "../sqlx_insert_derive" }
async-trait = "0.1.74"
sqlx = { version = "0.7.3" }

[dev-dependencies]
tokio = { version = "1.25", features = ["full"]}
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
uuid = { version = "0.8.2", features = ["v4"] }
testcontainers = { version = "0.12" }
anyhow = "^1"
tempfile = "^3"

trybuild = "1.0.54"

