[package]
name = "sqlx_insert_derive"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Szymongib/sqlx-insert"
description = "Proc macro for generating insert statements for sqlx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"]}
quote = "1"
proc-macro2 = { version = "1", default-features = false }

[features]
use-macros = []
