[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx_insert = { path = "../sqlx_insert" }

async-trait = "0.1.52"
sqlx = { version = "0.5.10", features = [ "runtime-tokio-rustls", "macros", "postgres", "sqlite", "uuid", "chrono", "migrate"] }
tokio = { version= "1.15.0", features = [ "full" ]}
uuid = { version = "0.8.2", features = ["v4"] }
testcontainers = { version = "0.12" }
